plugins {
  id 'jacoco'
  id 'java-library'
  id 'groovy'
  id 'org.jetbrains.intellij' version '0.4.16'
  
  id 'com.adarshr.test-logger' version '1.7.0'
}

group 'org.github.otanikotani'
version '0.0.1'

sourceCompatibility = JavaVersion.VERSION_1_8

repositories {
  jcenter()
  mavenCentral()
}

dependencies {
  implementation group: 'one.util', name: 'streamex', version: '0.6.8'
  implementation group: 'org.ocpsoft.prettytime', name: 'prettytime', version: '4.0.2.Final'

  testImplementation 'org.codehaus.groovy:groovy-all:2.4.17'
  testImplementation(group: 'org.spockframework', name: 'spock-core', version: '1.3-groovy-2.4') {
    exclude group: 'org.codehaus.groovy', module: 'groovy-all'
  }

}

// See https://github.com/JetBrains/gradle-intellij-plugin/
intellij {
  version '2019.3.1'

  plugins = ['github', 'git4idea']
}

patchPluginXml {
  changeNotes """
      Add change notes here.<br>
      <em>most HTML tags may be used</em>"""
}

List<String> opensArgs = [
  '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
  '--add-opens', 'java.base/java.lang.invoke=ALL-UNNAMED',
  '--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED',
  '--add-opens', 'java.base/java.util=ALL-UNNAMED',
  '--add-opens', 'java.base/java.util.concurrent=ALL-UNNAMED',
  '--add-opens', 'java.base/java.util.stream=ALL-UNNAMED',
  '--add-opens', 'java.base/java.util.function=ALL-UNNAMED',
  '--add-opens', 'java.base/java.util.regex=ALL-UNNAMED',
  '--add-opens', 'java.base/java.time=ALL-UNNAMED',
  '--add-opens', 'java.base/java.time.temporal=ALL-UNNAMED',
  '--add-opens', 'java.base/java.time.chrono=ALL-UNNAMED',
  '--add-opens', 'java.base/java.time.format=ALL-UNNAMED',
  '--add-opens', 'java.base/java.io=ALL-UNNAMED',
  '--add-exports', 'java.base/jdk.internal.vm=ALL-UNNAMED',
  '--add-opens', 'java.base/java.nio.file=ALL-UNNAMED',
  '--add-opens', 'java.base/java.net=ALL-UNNAMED',
  '--add-opens', 'java.base/sun.nio.fs=ALL-UNNAMED',
  '-ea'
]

runIde {
  jvmArgs = opensArgs
}

testlogger {
  theme 'mocha'
  showSkipped true
}

test {
  jvmArgs = opensArgs
  ignoreFailures = true

  finalizedBy jacocoTestReport
}

jacoco {
  toolVersion = "0.8.5"
}

jacocoTestReport {
  reports {
    xml.enabled false
    csv.enabled false
    html.destination file("${buildDir}/jacocoHtml")
  }
}
